--- a/week3/week3_payroll.html
+++ b/week3/week3_payroll.html
@@ -61,7 +61,7 @@
                   "<br>Social Security: $" + socialSecurity.toFixed(2) + 
                   "<br>Medicare: $" + medicare.toFixed(2) + 
                   "<br>Withholding: $" + withholding.toFixed(2) + 
-                  "<br>Net Pay: $" + netPay.toFixed(2) + "<br>");
+                  "<br>Net Pay: $" + netPay.toFixed(2));
         }
     
 
@@ -97,4 +97,5 @@
         <p id = payrollStub></p> 
 
     </body>
+
 </html>
